Add PWA functionality, can install as app and should work offline after that as well

--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html lang="en-US">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/something.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Local Tumbl Viewer</title>
+		<meta
+			name="description"
+			content="Application which shows Tumblr blog archives downloaded by TumblThree application"
+		/>
+		<meta name="apple-mobile-web-app-title" content="TumblViewer" />
+		<meta name="theme-color" content="#364153" />
+
+		<link rel="icon" href="/favicon.ico" sizes="48x48" />
+		<link rel="icon" href="/logo.svg" sizes="any" type="image/svg+xml" />
+		<link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,7 +23,6 @@
 		/>
 
 		<link href="/src/styles/index.css" rel="stylesheet" />
-		<title>Local Tumbl Viewer</title>
 	</head>
 	<body class="bg-background h-screen">
 		<div id="root" class="h-screen"></div>
