Use dynamic viewport units

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 		<link href="/src/styles/index.css" rel="stylesheet" />
 	</head>
-	<body class="bg-background h-screen">
-		<div id="root" class="h-screen"></div>
+	<body class="bg-background h-dvh">
+		<div id="root" class="h-dvh"></div>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
